# multi

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
benchmark/: graph.h  main.cpp  mandelbrot.h  utils.h
cmake/: addcatch2.cmake
include/multi/: context.h  handle.h  job.h  jobcontext.h  multi.h  order.h  task.h
include/multi/details/: context.inl  function.h  handle.h  icontext.h  job.h  job.inl  jobcontext.inl  jobnode.h  jobqueue.h  localjobqueue.h  meta.h  nulllock.h  queue.h  threadpool.h
src/: context.cpp  job.cpp  jobcontext.cpp  jobnode.cpp  jobqueue.cpp  localjobqueue.cpp  multi.cpp  task.cpp  threadpool.cpp
test/: context.cpp  job.cpp  jobcontext.cpp  jobnode.cpp  jobqueue.cpp  main.cpp  queue.cpp  task.cpp  threadpool.cpp
